--- a/book_reviews/package.json
+++ b/book_reviews/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "body-parser": "^1.20.2",
-    "ejs": "^3.1.9",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
