--- a/book_reviews/package.json
+++ b/book_reviews/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
